# rust-kanban-board

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
client/: .env.local  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
client/components/board/: BoardCard.tsx  CreateBoard.tsx
client/components/shared/: InputForm.tsx  Modal.tsx  Sidebar.tsx
client/model/: board.ts  task.ts
client/pages/: index.tsx
client/pages/boards/: [board_id].tsx
client/service/: boardService.ts
client/src/model/: dto.ts  groupedTasks.ts  task.ts
client/src/pages/: _app.tsx  index.tsx
client/src/service/: boardService.ts  (+1 more)
client/stores/: notificationStore.ts
client/utils/: dateUtils.ts  helpers.ts
nextjs/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
nextjs/pages/: _app.tsx  index.tsx
nextjs/service/: boardService.ts
nextjs/shared/: InputForm.tsx  Sidebar.tsx
nextjs/utils/: logging.ts  utils.ts
scripts/: run-app.sh
server/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.prod  README.md
server/scripts/: run-app.sh
server/src/: db.rs  main.rs  routes.rs  server.rs
src/: db.rs  main.rs  routes.rs  server.rs
src/board/: handlers.rs  mod.rs  model.rs  service.rs
src/config/: mod.rs
src/dto/: mod.rs
src/error/: handlers.rs  mod.rs
src/task/: handlers.rs  mod.rs  model.rs  routes.rs  service.rs  utils.rs
vite/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo
vite/src/: App.tsx  main.tsx
(+87 files in other folders)
