[package]
name = "kanban-board-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full"] }
axum = "0.6.4"
chrono = { version = "0.4.23" }
uuid = { version = "1.3.0", features = ["serde", "v7", "macro-diagnostics"] }
mongodb = "2.3.1"
