[package]
name = "kanban-board-backend"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full"] }
axum = "0.6.4"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1.0.118", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4", "macro-diagnostics"] }
mongodb = "2.3.1"
bson = { version = "2.5.0", features = ["chrono-0_4", "serde_with", "uuid-1"] }
tracing = "0.1.37"
clap = { version = "4.1.4", features = ["derive"] }
strum_macros = "0.24.3"
tokio-stream = "0.1.11"
strum = { version = "0.24.1", features = ["strum_macros"] }
thiserror = "1.0.38"
axum-macros = "0.3.2"
serde_with = "2.2.0"
dotenv = "0.15.0"
